src/objects/c2g__codaLookup__c.object
<CustomObject>
    <description>An internal object with no records. All FinancialForce Accounting users must have full access.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AgedAnalysisDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aged Analysis Definition</label>
        <referenceTo>c2g__codaAgedAnalysisDef__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CheckRange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check Range</label>
        <referenceTo>c2g__codaCheckRange__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DetailIntegrationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup integration rule field (Detail)</description>
        <label>Detail Integration Rule</label>
        <referenceTo>c2g__codaIntegrationRule__c</referenceTo>
        <relationshipLabel>Detail Integration Rule</relationshipLabel>
        <relationshipName>DetailIntegrationRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup dimension 1 field</description>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup dimension 2 field</description>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup dimension 3 field</description>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HeaderIntegrationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup integration rule field (Header)</description>
        <label>Header Integration Rule</label>
        <referenceTo>c2g__codaIntegrationRule__c</referenceTo>
        <relationshipLabel>Header Integration Rule</relationshipLabel>
        <relationshipName>HeaderIntegrationRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleStagingJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED:Inc Schedule Staging Journal</label>
        <referenceTo>c2g__codaIncScheduleStagingJnl__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LookupDateTime__c</fullName>
        <label>Lookup Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__LookupDate__c</fullName>
        <label>Lookup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__LookupNumber3__c</fullName>
        <label>Lookup Number3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LookupNumber__c</fullName>
        <label>Lookup Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Selection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selection</label>
        <referenceTo>c2g__codaSelection__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year</label>
        <referenceTo>c2g__codaYear__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__codaPeriod2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period2</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Lookups (Period2)</relationshipLabel>
        <relationshipName>Lookups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbext__Cash_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbext__SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lookup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>